# rust_oskernel

file_system/: Cargo.toml
file_system/src/: bitmap.rs  block_cache.rs  fs.rs  layout.rs  lib.rs  vfs.rs
fs_fuse/: Cargo.toml  run.py
fs_fuse/src/: main.rs
kernel/: Cargo.toml  Makefile  build.py  run.py
kernel/src/: batch.rs  config.rs  console.rs  link_app.S  loader.rs  logging.rs  main.rs  sbi.rs  timer.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs  virtio_blk.rs
kernel/src/drivers/chardev/: mod.rs  ns16550a.rs
kernel/src/drivers/gpu/: mod.rs
kernel/src/drivers/input/: mod.rs
kernel/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/process/: context.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  switch.S  switch.rs
kernel/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
kernel/src/syscall/: fs.rs  gui.rs  input.rs  mod.rs  process.rs  sync.rs  thread.rs
kernel/src/task/: context.rs  id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  switch.S  switch.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml  build.py
user/src/: console.rs  file.rs  io.rs  lib.rs  linker.ld  syscall.rs  task.rs
user/src/window/: buffer.rs  cursor.rs  destop_icos.rs  event.rs  manager.rs  mod.rs  style.rs  window.rs
user/src/window/app/: mod.rs  movement.rs  shape.rs  snake.rs
