[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
file_system = { path = "../file_system/" }

[profile.release]
debug = true
opt-level = 0               # 优化级别,最低是0,最高是3, 0方便debug
overflow-checks = false     # 关闭整数溢出检查