[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"

[profile.release]
debug = true
opt-level = 0               # 优化级别,最低是0,最高是3, 0方便debug
overflow-checks = false     # 关闭整数溢出检查